tests/fixtures/invalid/max_none_bool.py
# Cannot call max() with None, Bool
x = max(None, True)
